full regeneration with gpt35Turbo. Similar to gpt4oMini, gpt35Turbo fails to comprehend that it needs to import the class under test. However gpt35Turbo does even worse at this, with every class under test having errors, particularly for white prompts, but its nearly every test class has this problem