@@ -1,49 +1,47 @@
 package anagrams.gpt35Turbo.black;
-import anagrams.*;
 
+import anagrams.Anagrams;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+
 import java.util.List;
-import java.util.ArrayList;
-import java.util.Arrays;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class AnagramsTest {
-    
-    @Test
-    public void testGroupAnagrams_Example1() {
-        String[] input = {"eat", "tea", "tan", "ate", "nat", "bat"};
-        Anagrams anagrams = new Anagrams();
-        List<List<String>> result = anagrams.groupAnagrams(input);
-        List<List<String>> expected = new ArrayList<>();
-        expected.add(Arrays.asList("bat"));
-        expected.add(Arrays.asList("nat", "tan"));
-        expected.add(Arrays.asList("ate", "eat", "tea"));
-        for (int i = 0; i < expected.size(); i++) {
-            assertArrayEquals(expected.get(i).toArray(), result.get(i).toArray());
-        }
+
+    private Anagrams anagrams;
+
+    @BeforeEach
+    void setUp() {
+        anagrams = new Anagrams();
     }
-    
+
     @Test
-    public void testGroupAnagrams_Example2() {
+    void testGroupAnagramsExample1() {
+        String[] input = {"eat","tea","tan","ate","nat","bat"};
+        List<List<String>> expected = List.of(
+                List.of("bat"),
+                List.of("nat","tan"),
+                List.of("ate","eat","tea")
+        );
+        List<List<String>> actual = anagrams.groupAnagrams(input);
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void testGroupAnagramsExample2() {
         String[] input = {""};
-        Anagrams anagrams = new Anagrams();
-        List<List<String>> result = anagrams.groupAnagrams(input);
-        List<List<String>> expected = new ArrayList<>();
-        expected.add(Arrays.asList(""));
-        for (int i = 0; i < expected.size(); i++) {
-            assertArrayEquals(expected.get(i).toArray(), result.get(i).toArray());
-        }
+        List<List<String>> expected = List.of(List.of(""));
+        List<List<String>> actual = anagrams.groupAnagrams(input);
+        assertEquals(expected, actual);
     }
-    
+
     @Test
-    public void testGroupAnagrams_Example3() {
+    void testGroupAnagramsExample3() {
         String[] input = {"a"};
-        Anagrams anagrams = new Anagrams();
-        List<List<String>> result = anagrams.groupAnagrams(input);
-        List<List<String>> expected = new ArrayList<>();
-        expected.add(Arrays.asList("a"));
-        for (int i = 0; i < expected.size(); i++) {
-            assertArrayEquals(expected.get(i).toArray(), result.get(i).toArray());
-        }
+        List<List<String>> expected = List.of(List.of("a"));
+        List<List<String>> actual = anagrams.groupAnagrams(input);
+        assertEquals(expected, actual);
     }
 }
